--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.eclipse.mylyn.github</groupId>
 			<artifactId>org.eclipse.egit.github.core</artifactId>
-			<version>2.1.5</version>
+			<version>5.9.0.202009080501-r</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor.netty</groupId>
@@ -77,6 +77,11 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -127,6 +132,12 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository>
+
+		<repository>
+			<id>repo.eclipse.org</id>
+			<name>EGit Maven Repository - Releases</name>
+			<url>https://repo.eclipse.org/content/repositories/egit-releases/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
